# media-viewer

./: .gitignore  Cargo.toml  LICENSE  README.md  build-local-release.ps1  build.rs  nexa_verify.pub
.github/workflows/: release.yml
nexa/: Cargo.toml  build.rs
nexa-updater/: Cargo.toml  build.rs
nexa-updater/src/: main.rs  protocol.rs  verify.rs  worker.rs
nexa-updater/src/ui/: app.rs  colors.rs  mod.rs  window_effects.rs
nexa/src/: main.rs
nexa/src/core/: mod.rs  models.rs  scanner.rs  watcher.rs  windows_media.rs  windows_thumb.rs
nexa/src/data/: db.rs  db_service.rs  db_worker.rs  migrations.rs
nexa/src/infra/: config.rs  logging.rs  updater.rs
nexa/src/ui/: app.rs  colors.rs  detail_state.rs  fonts.rs  mod.rs  scan_manager.rs
nexa/src/ui/components/: card_primitives.rs  detail_panel.rs  media_card.rs  media_modal.rs  mod.rs  modal_window.rs  search_input.rs  settings_modal.rs  sidebar.rs  staging_card.rs  staging_sidebar.rs  update_badge.rs  update_section.rs
nexa/src/ui/components/widgets/: combo_box.rs  danger_button.rs  filter_chip.rs  mod.rs  section_heading.rs  section_row.rs  sort_row.rs  toggle.rs
nexa/src/utils/: file_helpers.rs  icon.rs  map_media_item.rs  map_staging_item.rs  mod.rs  query_builder.rs  truncate.rs
src/: db.rs  main.rs  ui.rs
src/core/: mod.rs  models.rs  scanner.rs  staging_scanner.rs  watcher.rs  windows_media.rs  windows_thumb.rs
src/data/: db.rs  db_service.rs  db_worker.rs  migrations.rs  mod.rs
src/infra/: cache.rs  config.rs  mod.rs  singleton.rs  updater.rs  window_effects.rs
src/ui/: app.rs  colors.rs  fonts.rs  icon_registry.rs  mod.rs  scan_manager.rs  styles.rs  texture_manager.rs
src/ui/components/: card_primitives.rs  custom_title_bar.rs  delete_confirm_modal.rs  detail_panel.rs  grid_layout.rs  grid_view.rs  media_card.rs  media_modal.rs  media_view.rs  metadata_modal.rs  mod.rs  modal_window.rs  reorder_modal.rs  search_input.rs  settings_modal.rs  sidebar.rs  staging_card.rs  staging_sidebar.rs  staging_view.rs  tag_modal.rs  title_bar.rs  update_badge.rs  update_section.rs
src/ui/components/widgets/: button.rs  combo_box.rs  danger_button.rs  filter_chip.rs  mod.rs  pill_button.rs  section_heading.rs  sort_row.rs  toggle.rs
src/utils/: current_timestamp.rs  file_helpers.rs  functions.rs  map_media_item.rs  media_item_builder.rs  mod.rs  query_builder.rs
tools/gen-keypair/: Cargo.toml
tools/gen-keypair/src/: main.rs
tools/sign-release/: Cargo.toml
tools/sign-release/src/: main.rs
tools/verify-release/: Cargo.toml
tools/verify-release/src/: main.rs
