[package]
name = "media-viewer"
version = "0.1.1"
edition = "2024"

[dependencies]
egui = { version = "0.33.3" }
eframe = { version = "0.33.3" }
image = { version = "0.25.10" }
walkdir = { version = "2.5.0" }
open = { version = "5.3.3" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
rfd = { version = "0.17.2" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
directories = { version = "6.0.0" }
sha2 = { version = "0.10.9" }
crossbeam-channel = { version = "0.5.15" }
num_cpus = { version = "1.17.0" }
parking_lot = { version = "0.12.5" }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_Com",
] }
lru = { version = "0.16.3" }