[package]
name = "Nexa"
version = "0.1.3"
edition = "2024"

[dependencies]
egui = { version = "0.34.1" }
egui_extras = { version = "0.34.1", features = ["image", "svg"] }
eframe = { version = "0.34.1", features = ["glow"] }
image = { version = "0.25.10" }
webp = { version = "0.3.1" }
open = { version = "5.3.3" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
rfd = { version = "0.17.2" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
directories = { version = "6.0.0" }
twox-hash = { version = "2.1.2" }
crossbeam-channel = { version = "0.5.15" }
num_cpus = { version = "1.17.0" }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_Com",
] }
lru = { version = "0.16.3" }
ignore = { version = "0.4.25" }
notify = { version = "8.2.0" }
usvg = "0.45.1"

[build-dependencies]
winres = { version = "0.1.12" }