[package]
name = "nexa-updater"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "nexa-updater"
path = "src/main.rs"

[dependencies]
egui = { version = "0.34.2" }
eframe = { version = "0.34.2", features = ["glow"] }
egui_extras = { version = "0.34.2", features = ["image", "svg"] }
image = { version = "0.25.10" }
usvg = "0.45.1"
ed25519-dalek = { version = "2.1.1" }
hex = { version = "0.4" }
ureq = { version = "3.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["fmt", "ansi"] }
tracing-appender = { version = "0.2.5" }
directories = { version = "6.0.0" }
crossbeam-channel = "0.5.15"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
] }

[build-dependencies]
winres = { version = "0.1.12" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
